set up turbo, husky, and corrected package jsons

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -3,15 +3,25 @@ FROM node:20-alpine AS base
 # Dependencies
 FROM base AS deps
 WORKDIR /app
-COPY package.json yarn.lock* package-lock.json* ./
-RUN yarn install --frozen-lockfile
+COPY package.json package-lock.json* ./
+RUN npm ci
+
+# Development target for docker-compose
+FROM base AS development
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+RUN npm run prisma:generate
+EXPOSE 4000
+CMD ["npm", "run", "dev"]
 
 # Builder
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN yarn build
+RUN npm run prisma:generate
+RUN npm run build
 
 # Runner
 FROM base AS runner
@@ -20,6 +30,7 @@ ENV NODE_ENV production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY package.json ./
-
+COPY prisma ./prisma
+RUN npm run prisma:generate
 EXPOSE 4000
-CMD ["yarn", "start"] 
+CMD ["npm", "start"] 
