--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx",
+    "test": "vitest run",
+    "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
