--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "turbo": "^1.12.4",
@@ -18,6 +20,7 @@
     "prettier": "^3.2.5",
     "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0"
+    "@typescript-eslint/parser": "^7.1.0",
+    "husky": "^9.0.11"
   }
 } 
