--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,8 +6,12 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -b",
     "start": "node dist/server.js",
+    "lint": "eslint . --ext ts",
+    "test": "jest",
+    "clean": "rm -rf dist node_modules",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate deploy",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -21,7 +25,8 @@
     "@types/node": "^20.17.10",
     "prisma": "^5.22.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "husky": "^9.0.11"
   },
   "main": "index.js",
   "keywords": [],
