--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "turbo run test",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "turbo": "^1.12.4",
@@ -23,4 +23,4 @@
     "@typescript-eslint/parser": "^7.1.0",
     "husky": "^9.0.11"
   }
-} 
+}
