--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,16 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -b",
     "start": "node dist/server.js",
-    "lint": "eslint . --ext ts",
+    "lint": "eslint .",
     "test": "jest",
     "clean": "rm -rf dist node_modules",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy",
-    "prepare": "husky install"
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -22,11 +22,17 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.17.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "prisma": "^5.22.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2",
-    "husky": "^9.0.11"
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "typescript-eslint": "^8.18.2"
   },
   "main": "index.js",
   "keywords": [],
