--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,10 +1,13 @@
 FROM node:20-alpine AS base
 
+# Install OpenSSL
+RUN apk add --no-cache openssl openssl-dev
+
 # Dependencies
 FROM base AS deps
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm ci
+COPY package.json ./
+RUN npm install
 
 # Development target for docker-compose
 FROM base AS development
