--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM node:20-alpine AS base
 # Dependencies
 FROM base AS deps
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm ci
+COPY package.json ./
+RUN npm install
 
 # Development target for docker-compose
 FROM base AS development
