fixed build errors

--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -24,7 +24,7 @@ RUN npm run build
 # Runner
 FROM base AS runner
 WORKDIR /app
-ENV NODE_ENV production
+ENV NODE_ENV=production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY package.json ./
