--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,70 +25,92 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
-          
+
+    - name: Get AWS Account ID
+      id: get-aws-account
+      run: |
+        AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
+        echo "AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}" >> $GITHUB_ENV
+        echo "Got AWS Account ID: ${AWS_ACCOUNT_ID}"
+
     - name: Create ECS Cluster
       run: |
+        echo "Creating/ensuring cluster exists..."
         aws ecs create-cluster --cluster-name ${{ env.ECS_CLUSTER }} || true
-        echo "Created/verified cluster ${{ env.ECS_CLUSTER }}"
 
-    - name: Create Task Definition
+    - name: Create ECS Task Definition
       run: |
-        if [ ! -f ${{ env.ECS_TASK_DEFINITION }} ]; then
-          echo "Task definition file not found at ${{ env.ECS_TASK_DEFINITION }}"
-          exit 1
-        fi
+        echo "Creating task definition..."
+        # Replace AWS_ACCOUNT_ID in the task definition
+        sed -i "s/\${AWS_ACCOUNT_ID}/${{ env.AWS_ACCOUNT_ID }}/g" ${{ env.ECS_TASK_DEFINITION }}
         
         TASK_DEF_ARN=$(aws ecs register-task-definition \
           --cli-input-json file://${{ env.ECS_TASK_DEFINITION }} \
           --query 'taskDefinition.taskDefinitionArn' \
           --output text)
-        echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
-        echo "Registered task definition: $TASK_DEF_ARN"
+        echo "TASK_DEF_ARN=${TASK_DEF_ARN}" >> $GITHUB_ENV
+        echo "Created task definition: ${TASK_DEF_ARN}"
+
+    - name: Create IAM Role
+      run: |
+        echo "Creating ECS Task Execution Role..."
+        aws iam create-role \
+          --role-name ecsTaskExecutionRole \
+          --assume-role-policy-document '{
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Principal": {
+                  "Service": "ecs-tasks.amazonaws.com"
+                },
+                "Action": "sts:AssumeRole"
+              }
+            ]
+          }' || true
+        
+        aws iam attach-role-policy \
+          --role-name ecsTaskExecutionRole \
+          --policy-arn arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy || true
+
+    - name: Create Log Groups
+      run: |
+        echo "Creating CloudWatch log groups..."
+        aws logs create-log-group --log-group-name /ecs/oomi-frontend || true
+        aws logs create-log-group --log-group-name /ecs/oomi-backend || true
 
     - name: Create ECS Services
       run: |
-        # Check if frontend service exists
-        if ! aws ecs describe-services --cluster ${{ env.ECS_CLUSTER }} --services oomi-frontend | grep -q "ACTIVE"; then
-          echo "Creating frontend service..."
-          aws ecs create-service \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --service-name oomi-frontend \
-            --task-definition ${{ env.TASK_DEF_ARN }} \
-            --desired-count 1 \
-            --launch-type FARGATE \
-            --network-configuration "awsvpcConfiguration={subnets=[${{ secrets.VPC_SUBNETS }}],securityGroups=[${{ secrets.SECURITY_GROUP }}],assignPublicIp=ENABLED}"
-        fi
+        echo "Creating frontend service..."
+        aws ecs create-service \
+          --cluster ${{ env.ECS_CLUSTER }} \
+          --service-name oomi-frontend \
+          --task-definition ${{ env.TASK_DEF_ARN }} \
+          --desired-count 1 \
+          --launch-type FARGATE \
+          --network-configuration "awsvpcConfiguration={subnets=[${{ secrets.VPC_SUBNETS }}],securityGroups=[${{ secrets.SECURITY_GROUP }}],assignPublicIp=ENABLED}" || true
         
-        # Check if backend service exists
-        if ! aws ecs describe-services --cluster ${{ env.ECS_CLUSTER }} --services oomi-backend | grep -q "ACTIVE"; then
-          echo "Creating backend service..."
-          aws ecs create-service \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --service-name oomi-backend \
-            --task-definition ${{ env.TASK_DEF_ARN }} \
-            --desired-count 1 \
-            --launch-type FARGATE \
-            --network-configuration "awsvpcConfiguration={subnets=[${{ secrets.VPC_SUBNETS }}],securityGroups=[${{ secrets.SECURITY_GROUP }}],assignPublicIp=ENABLED}"
-        fi
+        echo "Creating backend service..."
+        aws ecs create-service \
+          --cluster ${{ env.ECS_CLUSTER }} \
+          --service-name oomi-backend \
+          --task-definition ${{ env.TASK_DEF_ARN }} \
+          --desired-count 1 \
+          --launch-type FARGATE \
+          --network-configuration "awsvpcConfiguration={subnets=[${{ secrets.VPC_SUBNETS }}],securityGroups=[${{ secrets.SECURITY_GROUP }}],assignPublicIp=ENABLED}" || true
 
-    - name: Update ECS Services
+    - name: Update Services
       if: success()
       run: |
-        # Only try to update if services exist
-        if aws ecs describe-services --cluster ${{ env.ECS_CLUSTER }} --services oomi-frontend | grep -q "ACTIVE"; then
-          echo "Updating frontend service..."
-          aws ecs update-service \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --service oomi-frontend \
-            --task-definition ${{ env.TASK_DEF_ARN }} \
-            --force-new-deployment
-        fi
+        echo "Updating services..."
+        aws ecs update-service \
+          --cluster ${{ env.ECS_CLUSTER }} \
+          --service oomi-frontend \
+          --task-definition ${{ env.TASK_DEF_ARN }} \
+          --force-new-deployment || echo "Frontend service update failed"
         
-        if aws ecs describe-services --cluster ${{ env.ECS_CLUSTER }} --services oomi-backend | grep -q "ACTIVE"; then
-          echo "Updating backend service..."
-          aws ecs update-service \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --service oomi-backend \
-            --task-definition ${{ env.TASK_DEF_ARN }} \
-            --force-new-deployment
-        fi 
+        aws ecs update-service \
+          --cluster ${{ env.ECS_CLUSTER }} \
+          --service oomi-backend \
+          --task-definition ${{ env.TASK_DEF_ARN }} \
+          --force-new-deployment || echo "Backend service update failed" 
