--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "test": "vitest run",
+    "start": "vite preview --port 3000",
     "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
