--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -9,15 +9,6 @@ WORKDIR /app
 COPY package.json ./
 RUN npm install
 
-# Development target for docker-compose
-FROM base AS development
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-RUN npm run prisma:generate
-EXPOSE 4000
-CMD ["npm", "run", "dev"]
-
 # Builder
 FROM base AS builder
 WORKDIR /app
@@ -25,7 +16,7 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run prisma:generate
 RUN npm run build
-RUN cp -r src/routes dist/routes
+RUN npm prune --production
 
 # Runner
 FROM base AS runner
@@ -34,7 +25,8 @@ ENV NODE_ENV=production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY package.json ./
+COPY tsconfig.json ./
 COPY prisma ./prisma
 RUN npm run prisma:generate
 EXPOSE 4000
-CMD ["node", "dist/server.js"]
+CMD ["node", "--experimental-specifier-resolution=node", "dist/server.js"]
