--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "test": "vitest run",
-    "start": "vite preview --port 3000",
+    "preview": "vite preview",
+    "start": "vite preview --host --port 3000",
     "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
