--- a/fly.toml
+++ b/fly.toml
@@ -1,3 +1,8 @@
+# fly.toml app configuration file generated for oomi-blue-leaf-3945 on 2025-01-03T14:21:08-06:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = "oomi"
 primary_region = "sjc"
 
@@ -8,30 +13,15 @@ primary_region = "sjc"
   PORT = "8080"
   NODE_ENV = "production"
 
-[[services]]
+[http_service]
   internal_port = 8080
-  protocol = "tcp"
+  force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
+  processes = ["app"]
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-[[services]]
-  internal_port = 5432
-  protocol = "tcp"
-
-  [[services.ports]]
-    port = 5432
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
