--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -35,8 +35,7 @@
     "prisma": "^5.22.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2"
+    "typescript": "^5.7.2"
   },
   "main": "index.js",
   "keywords": [],
